[package]
name = "tea_torrent"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = "0.4.0-beta.1"
ureq = "2.4.0"
sha1 = "^0.10"
threadpool = "^1.8"
dirs = "^4.0"
rand = "^0.8"
clap = { version = "3.2.7", features = ["derive"] }