[package]
name = "tea_torrent"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = "0.4.0-beta.1"
sha1 = "^0.10"
threadpool = "^1.8"
dirs = "^4.0"
rand = "^0.8"
clap = { version = "^4.5.0", features = ["derive"] }
url = "2.3.1"
magnet-url = "^2"